A not very pretty placeholder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello Samantha
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Torrefact no!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="/media/css/main.css" />
+</head>
+<body>
+    <header><span class="color-torrefact">Torrefact&mdash;</span><br />&emsp;<span class="color-no">no!</span></header>
+
+    <p><small>Hello Samantha</small></p>
+</body>
+</html>
